--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" style="height: 100%">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/bubble_image.webp"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🫧 Pop Goes The Bubble! 🫧</title>
+    <title>Pop Goes The Bubble</title>
   </head>
   <body style="height: 100%">
     <div id="root" style="height: 100%"></div>
